# energy_monitoring

./: .gitignore  CMakeLists.txt  Kconfig.projbuild  README.md  partitions.csv  sdkconfig.defaults
certs/: ca_cert.crt  certificate.txt  esp32_cert.crt  esp32_key.key  mqtt_broker_cert.pem  server_cert.pem  server_key.pem
main/: CMakeLists.txt  common.h  energy_meter.c  energy_meter.h  main.c  mqtt_client.c  mqtt_client.h  mqtt_client_own.c  mqtt_client_own.h  nvs_storage.c  nvs_storage.h  relay_control.c  relay_control.h  tft_display.c  tft_display.h  wifi_manager.c  wifi_manager.h
